--- a/client/index.html
+++ b/client/index.html
@@ -21,30 +21,30 @@
         }
         #control-panel {
             background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            padding: 1.85vh;
+            border-radius: 0.74vh;
+            box-shadow: 0 0.37vh 0.56vh rgba(0,0,0,0.1);
 
             display: flex;
             flex-direction: column;
             justify-content: flex-start;
             align-items: flex-start;
 
-            gap: 10px;
+            gap: 0.93vh;
         }
 
         .info {
           display: flex;
           flex-direction: column;
-          gap: 10px;
+          gap: 0.93vh;
         }
 
         #panel-title {
             width: 100%;
             cursor: move;
             background-color: #f1f1f1;
-            border-top-left-radius: 8px;
-            border-top-right-radius: 8px;
+            border-top-left-radius: 0.74vh;
+            border-top-right-radius: 0.74vh;
 
             text-align: center;
 
@@ -60,11 +60,11 @@
           line-height: 0;
         }
         input[type="number"], input[type="range"] {
-            margin: 0 10px;
+            margin: 0 0.93vh;
         }
 
         input[type="range"] {
-          width: 300px;
+          width: 27.78vh;
         }
 
         .actions {
@@ -73,17 +73,17 @@
           flex-direction: row;
           justify-content: flex-end;
           align-items: center;
-          gap: 10px;
+          gap: 0.93vh;
         }
 
         .actions button {
           width: auto;
           height: auto;
-          padding: 5px 15px;
+          padding: 0.46vh 1.39vh;
 
           background: none;
-          border: 1px solid rgba(0, 0, 0, 0.4);
-          border-radius: 4px;
+          border: 0.09vh solid rgba(0, 0, 0, 0.4);
+          border-radius: 0.37vh;
 
           cursor: pointer;
 
@@ -99,9 +99,9 @@
 
         .coord-title {
           font-weight: bold;
-          font-size: 18px;
+          font-size: 1.67vh;
 
-          padding: 5px 0;
+          padding: 0.46vh 0;
         }
     </style>
 </head>
