--- a/client/index.html
+++ b/client/index.html
@@ -119,7 +119,7 @@
           
           <div>
               <label>Bone:</label>
-              <input type="text" id="boneInput" placeholder="Bone id">
+              <input type="text" id="boneInput" placeholder="Bone index">
           </div>
         </div>
         
